--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio - Yusuf Wahid</title>
-  </head>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
